# minimize_cpp_header

./: CMakeLists.txt  README.md  runcmake.bat  runcmake.sh  vcpkg.json
examples/TinyAD_Scalar/: README.md  Scalar_min.hpp  Scalar_min_ins.hpp  Scalar_min_lean.hpp  basic.cc  basic_ins.cpp
examples/TinyAD_Scalar/input/: Scalar.hh
examples/simple1/: README.md  header_min.hpp  header_min_ins.hpp  header_min_lean.hpp  main.cpp  main_ins.cpp
examples/simple1/input/: header.hpp  main.cpp
examples/simple2/: README.md  header_min.hpp  header_min_ins.hpp  header_min_lean.hpp  main.cpp  main_ins.cpp
examples/simple2/input/: header.hpp  main.cpp
src/: CMakeLists.txt  main.cpp  stdafx.h  visitor.cpp  visitor.h
